@@ -8,3 +8,6 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ### Added
 - Creating a validator for a JSON schema
+- Added in enums
+- Allow types to be array of schema types
+- Use the any of type
